--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 
 galaxy_info:
   role_name: repo_mirror
+  namespace: adfinis-sygroup
   author: 'Adfinis SyGroup AG'
   description: 'Mirror a specified repository'
   company: 'Adfinis SyGroup AG'
