--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 
 galaxy_info:
   role_name: repo_mirror
-  namespace: adfinis-sygroup
+  namespace: adfinis
   author: 'Adfinis SyGroup AG'
   description: 'Mirror a specified repository'
   company: 'Adfinis SyGroup AG'
