Revert "systemd-analyze is a cmd, not an argument"
This reverts commit 821f49bbec81c76f9bcc230475663e335ad8c6b7.

--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -61,8 +61,8 @@
 
 - name: validate calendar format
   ansible.builtin.command:
-    cmd: "systemd-analyze"
     argv:
+      - "systemd-analyze"
       - "calendar"
       - "{{ item.systemd_timer_calendar }}"
   register: systemd_analyze_output
