--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,11 +25,14 @@ repo_mirror_rsync_timeout: 30
 # the default max runtime for a sync job
 _default_systemd_unit_max_runtime_sec: 43200  # 12 hours
 
-# the default enabled state of a systemd unit / timer
-_default_systemd_timer_disabled: false
+# the default enabled state of a systemd timer unit
+_default_systemd_timer_enabled: true
+
+# the default unit state of a systemd timer unit
+_default_systemd_timer_unit_state: 'started'
 
 # the default unit state of a systemd service unit
-_default_systemd_timer_unit_state: 'stopped'
+_default_systemd_service_unit_state: 'stopped'
 
 # The FQDN of the mirror
 repo_mirror_fqdn: 'mirror.example.com'
