Only report change when there has been a change
Co-authored-by: Sebastian P. <5564491+s3lph@users.noreply.github.com>

--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -69,6 +69,7 @@
       - "calendar"
       - "{{ item.systemd_timer_calendar }}"
   register: systemd_analyze_output
+  changed_when: false
   failed_when: systemd_analyze_output.rc != 0
   with_items: "{{ repo_mirror_repos }}"
   when: item.systemd_timer_calendar is defined
