use adfinis.facts from galaxy

--- a/requirements.yml
+++ b/requirements.yml
@@ -8,7 +8,4 @@ collections:
   - containers.podman
   - ansible.posix
   - community.general
-  # @TODO: This needs to be migrated to a collection in the adfinis namespace
-  - name: https://github.com/aconitumnapellus/adfinis.facts
-    type: git
-    version: main
+  - adfinis.facts
