--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,6 +21,11 @@ galaxy_info:
 collections:
   - ansible.posix
   - community.general
+  - adfinis.facts
 
 dependencies:
-  - name: 0x0i.systemd
+  - name: jonaspammer.bootstrap
+  # @TODO: Use the galaxy uri again once a new release has been created
+  - src: https://github.com/O1ahmad/ansible-role-systemd
+    version: master
+    scm: git
