--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,7 +2,8 @@
 dependency:
   name: galaxy
   options:
-    role-file: requirements.yml
+    role-file: molecule_requirements.yml
+    requirements-file: molecule_requirements.yml
 driver:
   name: podman
 platforms:
