use variable for cloning path, discard local changes

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,9 @@ repo_mirror_bwlimit: 30MiB
 # The default rsync timeout in seconds
 repo_mirror_rsync_timeout: 30
 
+# The default directory to clone the landingpage repository to
+repo_mirror_landingpage_clone_dir: /opt/landingpage
+
 # the default max runtime for a sync job
 _default_systemd_unit_max_runtime_sec: 43200  # 12 hours
 
