--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -42,7 +42,8 @@
 - name: clone landingpage repository
   ansible.builtin.git:
     repo: https://github.com/adfinis/landingpage-repo_mirror
-    dest: /opt/landingpage
+    dest: '{{ repo_mirror_landingpage_clone_dir }}'
+    force: true
 
 - name: install npm dependencies
   ansible.builtin.shell:
