--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -48,9 +48,15 @@
 - name: install npm dependencies
   ansible.builtin.shell:
     command: npm install
-    chdir: /opt/landingpage
+    chdir: '{{ repo_mirror_landingpage_clone_dir }}'
 
 - name: build landingpage
   ansible.builtin.shell:
     command: make prod
-    chdir: /opt/landingpage
+    chdir: '{{ repo_mirror_landingpage_clone_dir }}'
+
+- name: deploy landingpage
+  ansible.builtin.copy:
+    dest: '{{ repo_mirror_base_path }}'
+    src: '{{ repo_mirror_landingpage_clone_dir }}/dist/'
+    remote_src: true
