--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,7 +1,7 @@
 ---
 
 roles:
-  - name: jonaspammer.bootstrap
+  - name: robertdebock.bootstrap
   # @TODO: Use the galaxy uri again once a new release has been created
   - src: https://github.com/O1ahmad/ansible-role-systemd
     version: master
